--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,18 +6,18 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.behmennnn.aspentravel.presentation.fragments.HomeFragment"
+        android:name="com.behmennnn.aspentravel.presentation.fragments.home.HomeFragment"
         android:label="HomeFragment" />
     <fragment
         android:id="@+id/favoritesFragment"
-        android:name="com.behmennnn.aspentravel.presentation.fragments.FavoritesFragment"
+        android:name="com.behmennnn.aspentravel.presentation.fragments.favorites.FavoritesFragment"
         android:label="FavoritesFragment" />
     <fragment
         android:id="@+id/messageFragment"
-        android:name="com.behmennnn.aspentravel.presentation.fragments.MessageFragment"
+        android:name="com.behmennnn.aspentravel.presentation.fragments.message.MessageFragment"
         android:label="MessageFragment" />
     <fragment
         android:id="@+id/exploreFragment"
-        android:name="com.behmennnn.aspentravel.presentation.fragments.ExploreFragment"
+        android:name="com.behmennnn.aspentravel.presentation.fragments.explore.ExploreFragment"
         android:label="ExploreFragment" />
 </navigation>
