--- a/app/src/main/res/layout/single_popular.xml
+++ b/app/src/main/res/layout/single_popular.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingEnd="24dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+    android:paddingEnd="24dp">
+
     <androidx.cardview.widget.CardView
         android:layout_width="188dp"
-        app:cardElevation="0dp"
         android:layout_height="240dp"
-        app:cardCornerRadius="35dp">
+        app:cardCornerRadius="35dp"
+        app:cardElevation="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -23,25 +23,32 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-            </ImageView>
+                app:layout_constraintTop_toTopOf="parent"></ImageView>
 
             <androidx.cardview.widget.CardView
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
                 app:cardCornerRadius="1000dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="6dp"
+                    android:src="@drawable/empty_heart_icon">
+
+                </ImageView>
 
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginBottom="12dp"
-                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
@@ -57,6 +64,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nexa_regular"
                         android:padding="4dp"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
                         android:text="Alley palace"
                         android:textColor="@color/white"
                         android:textSize="12sp">
@@ -72,23 +81,40 @@
                     app:cardBackgroundColor="#4D5652"
                     app:cardCornerRadius="90dp">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/nexa_regular"
-                        android:padding="4dp"
-                        android:text="4.1"
-                        android:textColor="@color/white"
-                        android:textSize="12sp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp">
 
-                    </TextView>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:src="@drawable/star_icon">
+
+                        </ImageView>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/nexa_regular"
+                            android:padding="4dp"
+                            android:text="4.1"
+                            android:textColor="@color/white"
+                            android:textSize="12sp">
+
+                        </TextView>
+
+                    </LinearLayout>
+
 
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     </androidx.cardview.widget.CardView>
