--- a/app/src/main/res/layout/single_popular.xml
+++ b/app/src/main/res/layout/single_popular.xml
@@ -16,6 +16,7 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/locationImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
@@ -60,6 +61,7 @@
                     app:cardCornerRadius="90dp">
 
                     <TextView
+                        android:id="@+id/locationTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nexa_regular"
@@ -97,6 +99,7 @@
                         </ImageView>
 
                         <TextView
+                            android:id="@+id/locationRating"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nexa_regular"
