--- a/app/src/main/res/layout/single_recommended.xml
+++ b/app/src/main/res/layout/single_recommended.xml
@@ -25,6 +25,7 @@
                 app:cardCornerRadius="15dp">
 
                 <ImageView
+                    android:id="@+id/locationImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/img"
@@ -35,7 +36,7 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/titleText"
+                android:id="@+id/locationTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Explore Aspen"
@@ -50,11 +51,12 @@
             </TextView>
 
             <TextView
+                android:id="@+id/countryText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Italy, Rome"
                 android:fontFamily="@font/nexa_regular"
-                app:layout_constraintTop_toBottomOf="@id/titleText"
+                app:layout_constraintTop_toBottomOf="@id/locationTitle"
                 app:layout_constraintStart_toStartOf="parent"
                 android:textSize="10sp"
                 android:textColor="@color/gray_50"
