New api implemented and Location detail fragment is ready

--- a/app/src/main/res/layout/fragment_location_detail.xml
+++ b/app/src/main/res/layout/fragment_location_detail.xml
@@ -9,6 +9,7 @@
     android:paddingTop="20dp">
 
     <ScrollView
+        android:id="@+id/mainScrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,10 +22,6 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-
-
-
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -41,11 +38,11 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/locationImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:src="@drawable/img">
-
             </ImageView>
 
             <androidx.cardview.widget.CardView
@@ -96,7 +93,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/nexa_bold"
-        android:text="Coeurdes Alpes"
         android:textColor="@color/black"
         android:layout_marginTop="32dp"
         android:textSize="26sp"
@@ -120,11 +116,11 @@
         </ImageView>
 
         <TextView
+            android:id="@+id/ratingText"
             android:layout_marginStart="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nexa_regular"
-            android:text="4.5 (355 reviews)"
             android:textColor="#606060"
             android:textSize="14sp">
 
@@ -149,7 +145,6 @@
         android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cinque Terre, located on the rugged coast of the Italian Riviera, is a UNESCO World Heritage site famous for its 5 colorful villages clinging to steep cliffs overlooking the Ligurian Sea. Cinque Terre is renowned for its dramatic coastal scenery, characterized by steep cliffs, rugged coastline, vineyards, and ter"
         android:textColor="#3A544F"
         android:fontFamily="@font/nexa_book"
         app:layout_constraintEnd_toEndOf="parent"
@@ -189,10 +184,10 @@
             </TextView>
 
             <TextView
+                android:id="@+id/priceText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nexa_extra_bold"
-                android:text="$199"
                 android:textSize="18sp"
                 android:textColor="@color/green">
 
