--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,11 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.behmennnn.aspentravel.presentation.fragments.home.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_locationDetailFragment"
+            app:destination="@id/locationDetailFragment" />
+    </fragment>
     <fragment
         android:id="@+id/favoritesFragment"
         android:name="com.behmennnn.aspentravel.presentation.fragments.favorites.FavoritesFragment"
@@ -20,4 +24,8 @@
         android:id="@+id/exploreFragment"
         android:name="com.behmennnn.aspentravel.presentation.fragments.explore.ExploreFragment"
         android:label="ExploreFragment" />
+    <fragment
+        android:id="@+id/locationDetailFragment"
+        android:name="com.behmennnn.aspentravel.presentation.fragments.location_detail.LocationDetailFragment"
+        android:label="LocationDetailFragment" />
 </navigation>
