--- a/app/src/main/res/layout/fragment_location_detail.xml
+++ b/app/src/main/res/layout/fragment_location_detail.xml
@@ -41,8 +41,7 @@
                 android:id="@+id/locationImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/img">
+                android:scaleType="centerCrop">
             </ImageView>
 
             <androidx.cardview.widget.CardView
@@ -100,6 +99,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
     
     <LinearLayout
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/locationTitle"
         android:layout_marginTop="8dp"
         android:id="@+id/titleLayout"
