--- a/app/src/main/res/layout/single_popular.xml
+++ b/app/src/main/res/layout/single_popular.xml
@@ -64,7 +64,7 @@
                         android:id="@+id/locationTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/nexa_regular"
+                        android:fontFamily="@font/dmsans_regular"
                         android:padding="4dp"
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
@@ -102,7 +102,7 @@
                             android:id="@+id/locationRating"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/nexa_regular"
+                            android:fontFamily="@font/dmsans_regular"
                             android:padding="4dp"
                             android:text="4.1"
                             android:textColor="@color/white"
