--- a/app/src/main/res/layout/viewpager_single.xml
+++ b/app/src/main/res/layout/viewpager_single.xml
@@ -17,6 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+
             <ImageView
                 android:id="@+id/bgImage"
                 android:layout_width="match_parent"
@@ -29,6 +31,58 @@
                 app:layout_constraintTop_toTopOf="parent">
 
             </ImageView>
+
+
+            <LinearLayout
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="32dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@+id/descriptionText"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                    android:id="@+id/titleText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dmsans_semibold"
+                    android:text="Kuta Beach"
+                    android:textColor="@color/white"
+                    android:textSize="28sp"
+                    app:layout_constraintStart_toStartOf="parent"></TextView>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/location_icon"
+                        android:tint="@color/white" />
+
+                    <TextView
+                        android:id="@+id/locationText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="4dp"
+                        android:fontFamily="@font/dmsans_regular"
+                        android:text="Bali, Indoenisa"
+                        android:textAlignment="center"
+                        android:textColor="@color/white" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
 
             <TextView
                 android:id="@+id/descriptionText"
@@ -60,9 +114,10 @@
                 android:layout_marginEnd="20dp">
 
                 <TextView
+                    android:id="@+id/priceText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/dmsans_regular"
+                    android:fontFamily="@font/dmsans_semibold"
                     android:text="$250.00"
                     android:textColor="@color/white"
                     android:textSize="20sp"
@@ -73,6 +128,7 @@
                 </TextView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/bookingButton"
                     android:layout_width="150dp"
                     android:layout_height="40dp"
                     app:cardBackgroundColor="@color/main_color"
