--- a/app/src/main/res/layout/fragment_location_detail.xml
+++ b/app/src/main/res/layout/fragment_location_detail.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingStart="20dp"
     android:paddingEnd="20dp"
+    android:background="@color/white"
     android:paddingTop="20dp">
 
     <ScrollView
