--- a/app/src/main/res/layout/fragment_all_locations.xml
+++ b/app/src/main/res/layout/fragment_all_locations.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
@@ -20,24 +21,37 @@
 
     </TextView>
 
-    <ImageView
-        android:id="@+id/arrowBack"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/baseline_arrow_back_24"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/backButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:cardBackgroundColor="#F3F8FE"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="14dp"
+            android:src="@drawable/back_icon">
+
+        </ImageView>
+
+    </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="16dp"
+        android:id="@+id/locationRv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:listitem="@layout/single_all_locations"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintTop_toBottomOf="@+id/backButton"
         app:spanCount="2"
-        app:layout_constraintTop_toBottomOf="@id/topBarText" />
+        tools:listitem="@layout/single_all_locations" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
