--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -97,6 +97,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textinput">
 
                 <RadioGroup
+                    android:id="@+id/radioGroup"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
