5% opacity main color -> added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="green">#2dd7a4</color>
     <color name="gray_50">#b8b8b8</color>
     <color name="main_50">#f3f8fe</color>
+    <color name="main_5">#0D196eef</color>
 </resources>
