--- a/app/src/main/res/layout/fragment_location_detail.xml
+++ b/app/src/main/res/layout/fragment_location_detail.xml
@@ -88,16 +88,17 @@
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/locationTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/dmsans_semibold"
-        android:textColor="@color/black"
-        android:layout_marginTop="32dp"
-        android:textSize="26sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+            <TextView
+                android:id="@+id/locationTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:fontFamily="@font/dmsans_semibold"
+                android:textColor="@color/black"
+                android:textSize="26sp"
+                app:layout_constraintEnd_toStartOf="@+id/showMap"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardView" />
     
     <LinearLayout
         app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +161,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/featuresRv"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:listitem="@layout/single_feature"
         android:orientation="horizontal"
