--- a/app/src/main/res/layout/single_all_locations.xml
+++ b/app/src/main/res/layout/single_all_locations.xml
@@ -33,6 +33,8 @@
         android:text="Aspen Travel"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:maxLines="1"
+        android:maxLength="20"
         app:layout_constraintEnd_toEndOf="@+id/cardView2"
         app:layout_constraintStart_toStartOf="@+id/cardView2"
         app:layout_constraintTop_toBottomOf="@+id/cardView2"></TextView>
